--- a/app/src/main/res/layout-land/activity_info.xml
+++ b/app/src/main/res/layout-land/activity_info.xml
@@ -10,18 +10,20 @@
         android:id="@+id/imageViewLoading"
         android:layout_width="97dp"
         android:layout_height="109dp"
+        android:contentDescription="@string/loading_picture"
+        android:visibility="gone"
         app:layout_constraintBottom_toTopOf="@+id/guideline3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/loading_covid"
-        android:contentDescription="@string/loading_picture"/>
+        app:srcCompat="@drawable/loading_covid" />
 
     <ProgressBar
         android:id="@+id/progressBarLoading"
         style="?android:attr/progressBarStyle"
         android:layout_width="57dp"
         android:layout_height="50dp"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/guideline3" />
@@ -37,7 +39,6 @@
         android:id="@+id/scrollViewInfoActivity"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -138,11 +139,11 @@
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_marginEnd="16dp"
+                        android:contentDescription="@string/image_cases"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvCountryName"
-                        app:srcCompat="@drawable/header_covid_virus"
-                        android:contentDescription="@string/image_cases"/>
+                        app:srcCompat="@drawable/header_covid_virus" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -174,11 +175,11 @@
                         android:layout_width="150dp"
                         android:layout_height="150dp"
                         android:layout_marginEnd="16dp"
+                        android:contentDescription="@string/image_vaccinated"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/tvCountryName2"
-                        app:srcCompat="@drawable/vaccine"
-                        android:contentDescription="@string/image_vaccinated"/>
+                        app:srcCompat="@drawable/vaccine" />
 
                     <TextView
                         android:id="@+id/tvCountryName2"
